// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base: renders correctly 1`] = `
<nav
  className="navbar-leihs navbar navbar-expand navbar-dark bg-dark"
  style={
    Object {
      "backgroundColor": "#343a40 !important",
    }
  }
>
  <a
    className="navbar-brand"
    href="/"
  />
  <button
    className="navbar-toggler"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    style={Object {}}
  >
    <ul
      className="mr-auto navbar-nav"
    />
    <ul
      className="ml-auto navbar-nav"
    >
      <form
        action="/sign-in"
        className="ui-form-signin form-inline my-2 my-lg-0"
        method="POST"
      >
        <div
          className="input-group"
        >
          <input
            aria-describedby="button-addon2"
            aria-label="Benutzername/E-Mail"
            autoCapitalize="off"
            autoCorrect="off"
            className="form-control"
            name="user"
            placeholder="Benutzername/E-Mail"
            required={false}
            type="text"
          />
          <div
            className="input-group-append"
          >
            <button
              className="btn btn-success"
              id="button-addon2"
              type="submit"
            >
              Login
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="sr-only"
          tabIndex={-1}
        >
          <input
            name="invisible-password"
            type="hidden"
            value="true"
          />
          <label>
            Password
            <input
              autoComplete="current-password"
              className="form-control"
              name="password"
              type="password"
            />
          </label>
        </div>
      </form>
    </ul>
  </div>
</nav>
`;

exports[`on root page, logged out: renders correctly 1`] = `
<nav
  className="navbar-leihs navbar navbar-expand navbar-dark bg-dark"
  style={
    Object {
      "backgroundColor": "#343a40 !important",
    }
  }
>
  <a
    className="navbar-brand"
    href="/"
  >
    leihs
  </a>
  <button
    className="navbar-toggler"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    style={Object {}}
  >
    <ul
      className="mr-auto navbar-nav"
    />
    <ul
      className="ml-auto navbar-nav"
    >
      <form
        action="/sign-in"
        className="ui-form-signin form-inline my-2 my-lg-0"
        method="POST"
      >
        <div
          className="input-group"
        >
          <input
            aria-describedby="button-addon2"
            aria-label="Benutzername/E-Mail"
            autoCapitalize="off"
            autoCorrect="off"
            className="form-control"
            name="user"
            placeholder="Benutzername/E-Mail"
            required={false}
            type="text"
          />
          <div
            className="input-group-append"
          >
            <button
              className="btn btn-success"
              id="button-addon2"
              type="submit"
            >
              Login
            </button>
          </div>
        </div>
        <div
          aria-hidden={true}
          className="sr-only"
          tabIndex={-1}
        >
          <input
            name="invisible-password"
            type="hidden"
            value="true"
          />
          <label>
            Password
            <input
              autoComplete="current-password"
              className="form-control"
              name="password"
              type="password"
            />
          </label>
        </div>
        <input
          name="return_to"
          type="hidden"
          value="/someapp"
        />
      </form>
    </ul>
  </div>
</nav>
`;

exports[`usage in shared app: renders correctly 1`] = `
<nav
  className="navbar-leihs navbar navbar-expand-sm navbar-dark bg-dark"
  style={
    Object {
      "backgroundColor": "hsl(94.19999999999999, 100%, 12.9%) !important",
    }
  }
>
  <a
    className="navbar-brand"
    href="/"
  >
    leihs
  </a>
  <button
    className="navbar-toggler"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    style={Object {}}
  >
    <ul
      className="mr-auto navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          data-foo="bar"
          href="/1"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cog fa-w-16 fa-fw mr-1"
            data-icon="cog"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M444.788 291.1l42.616 24.599c4.867 2.809 7.126 8.618 5.459 13.985-11.07 35.642-29.97 67.842-54.689 94.586a12.016 12.016 0 0 1-14.832 2.254l-42.584-24.595a191.577 191.577 0 0 1-60.759 35.13v49.182a12.01 12.01 0 0 1-9.377 11.718c-34.956 7.85-72.499 8.256-109.219.007-5.49-1.233-9.403-6.096-9.403-11.723v-49.184a191.555 191.555 0 0 1-60.759-35.13l-42.584 24.595a12.016 12.016 0 0 1-14.832-2.254c-24.718-26.744-43.619-58.944-54.689-94.586-1.667-5.366.592-11.175 5.459-13.985L67.212 291.1a193.48 193.48 0 0 1 0-70.199l-42.616-24.599c-4.867-2.809-7.126-8.618-5.459-13.985 11.07-35.642 29.97-67.842 54.689-94.586a12.016 12.016 0 0 1 14.832-2.254l42.584 24.595a191.577 191.577 0 0 1 60.759-35.13V25.759a12.01 12.01 0 0 1 9.377-11.718c34.956-7.85 72.499-8.256 109.219-.007 5.49 1.233 9.403 6.096 9.403 11.723v49.184a191.555 191.555 0 0 1 60.759 35.13l42.584-24.595a12.016 12.016 0 0 1 14.832 2.254c24.718 26.744 43.619 58.944 54.689 94.586 1.667 5.366-.592 11.175-5.459 13.985L444.788 220.9a193.485 193.485 0 0 1 0 70.2zM336 256c0-44.112-35.888-80-80-80s-80 35.888-80 80 35.888 80 80 80 80-35.888 80-80z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
           
          one
        </a>
      </li>
      <li
        className="nav-item"
      >
        <a
          className="nav-link active"
          href="/2"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-sitemap fa-w-20 fa-fw mr-1"
            data-icon="sitemap"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 640 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128 352H32c-17.67 0-32 14.33-32 32v96c0 17.67 14.33 32 32 32h96c17.67 0 32-14.33 32-32v-96c0-17.67-14.33-32-32-32zm-24-80h192v48h48v-48h192v48h48v-57.59c0-21.17-17.23-38.41-38.41-38.41H344v-64h40c17.67 0 32-14.33 32-32V32c0-17.67-14.33-32-32-32H256c-17.67 0-32 14.33-32 32v96c0 17.67 14.33 32 32 32h40v64H94.41C73.23 224 56 241.23 56 262.41V320h48v-48zm264 80h-96c-17.67 0-32 14.33-32 32v96c0 17.67 14.33 32 32 32h96c17.67 0 32-14.33 32-32v-96c0-17.67-14.33-32-32-32zm240 0h-96c-17.67 0-32 14.33-32 32v96c0 17.67 14.33 32 32 32h96c17.67 0 32-14.33 32-32v-96c0-17.67-14.33-32-32-32z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
           
          two
        </a>
      </li>
    </ul>
    <ul
      className="ml-auto navbar-nav"
    >
      <li
        className="dropdown nav-item"
        onKeyDown={[Function]}
      >
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle nav-link"
          href="#"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-user-circle fa-w-16 fa-lg "
            data-icon="user-circle"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
        <div
          aria-hidden={true}
          className="dropdown-menu dropdown-menu-right"
          role="menu"
          tabIndex="-1"
        >
          <span
            className="text-body disabled dropdown-item"
            data-trigger={true}
            disabled={true}
            onClick={[Function]}
            tabIndex="-1"
          >
            <b />
          </span>
          <div
            className="dropdown-divider"
            data-trigger={true}
            onClick={[Function]}
            tabIndex="-1"
          />
          <a
            className="dropdown-item"
            data-trigger={true}
            href="/borrow/user"
            onClick={[Function]}
            tabIndex="0"
          >
            Benutzerdaten
          </a>
          <a
            className="dropdown-item"
            data-trigger={true}
            href="/borrow/user/documents"
            onClick={[Function]}
            tabIndex="0"
          >
            Meine Dokumente
          </a>
          <div
            className="dropdown-divider"
            data-trigger={true}
            onClick={[Function]}
            tabIndex="-1"
          />
          <form
            action="/sign-out"
            method="POST"
          >
            <button
              className="dropdown-item"
              data-trigger={true}
              onClick={[Function]}
              tabIndex="0"
              type="submit"
            >
              <input
                name="csrf-token"
                type="hidden"
              />
              Logout
            </button>
          </form>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;
